--- a/src/Topbar.css
+++ b/src/Topbar.css
@@ -4,6 +4,7 @@
     align-content: flex-start;
     margin-left: 20px;
     justify-content: space-between;
+    margin-left: 27%;
 }
 #pic{
     display: flex;
@@ -14,7 +15,7 @@
     margin-left: -8px;
     margin-top: -8px;
     display: flex;
-    height: 50px;
+    height: 60px;
     width: 101.05%;
     background-color: #1F618D;   
 }
@@ -24,4 +25,5 @@
     font: bold;
     font-size: x-large;
     color: white;
+    text-align: center;
 }
